# uncertainty-quantification-snf

./: .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci-docker.yaml
configs/: config.py
data/: x_ood.csv  x_test.csv  x_train.csv
examples/: config.py
uqma/: __init__.py  model.py  predict.py  train.py
uqma/scripts/: main.py  uqma_predict.py  uqma_train.py
