[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name =  "uqma"
description = "Uncertainty quantification for mobility analysis"
authors = [{name = "Simon Dirmeier", email = "sfyrbnd@pm.me"}]
readme = "README.md"
license = "Apache-2.0"
homepage = "https://github.com/irmlma/uncertainty-quantification-snf"
keywords = []
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
requires-python = ">=3.9"
dependencies = [
    "distrax>=0.1.4",
    "dm-haiku>=0.0.10",
    "flax>=0.7.0",
    "jaxlib>=0.4.13",
    "jax>=0.4.13",
    "ml-collections>=0.1.1",
    "optax>=0.1.5",
    "surjectors>=0.2.2",
    "rmsyutls>=0.0.1",
]
dynamic = ["version"]

[project.urls]
homepage = "https://github.com/irmlma/uncertainty-quantification-snf"

[project.scripts]
uqma-train = "uqma.scripts.uqma_train:main"
uqma-predict = "uqma.scripts.uqma_predict:main"


[tool.hatch.version]
path = "uqma/__init__.py"

[tool.hatch.build.targets.sdist]
exclude = [
    "/.github",
    "./gitignore",
    "/.pre-commit-config.yaml"
]

[tool.hatch.envs.test]
dependencies = [
    "pylint>=2.15.10",
    "pytest>=7.2.0",
    "pytest-cov>=4.0.0"
]


[tool.hatch.envs.test.scripts]
lint = 'pylint uqma'

[tool.black]
line-length = 80
extend-ignore = "E203"
target-version = ['py39']
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 80
include_trailing_comma = true

[tool.flake8]
max-line-length = 80
extend-ignore = ["E203", "W503"]
per-file-ignores = [
    '__init__.py:F401',
]

[tool.pylint.messages_control]
disable = """
invalid-name,missing-module-docstring,R0801
"""

[tool.bandit]
skips = ["B101", "B301", "B403"]
